--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -76,6 +76,12 @@ const currentYear = new Date().getFullYear();
           </ul>
         </nav>
       </div>
+
+      <!-- Incluir el componente SocialLinks -->
+     <div class="col-span-1">
+      <h3 class="text-lg font-semibold mb-4">Síguenos</h3>
+      <Social/>
+    </div>  
     </div>
 
   
